modify ClassEntity to StudentEntity